# Lumo_Super_Agent

./: .env.example  .gitignore  CHANGELOG-2026-05.md  README.md  STATUS.md  SUPABASE_SETUP.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/ml-service/: .env.example  CONTRIBUTING.md  Dockerfile  README.md  modal_app.py  pyproject.toml
apps/ml-service/app/: __init__.py  main.py
apps/ml-service/docs/: modal-deploy.md  plan-endpoint.md
apps/ml-service/docs/designs/: embedding-service.md  observability-platform.md  vector-store.md
apps/ml-service/docs/eval/: lead-classifier-v1.md
apps/ml-service/docs/notes/: suggestions-recon.md  system-prompt-recon.md
apps/ml-service/docs/progress/: INTENT-CLASSIFIER-MIGRATE-PYTHON-1.md  MLSERVICE-MODAL-DEPLOY-1.md  (+3 more)
apps/ml-service/lumo_ml/: __init__.py  anomaly_detection.py  auth.py  config.py  forecasting.py  image_embedding.py  main.py  modal_bge.py  modal_clip.py  modal_whisper.py  pdf_extraction.py  redaction.py  sandbox.py  schemas.py  tools.py  transcription.py  trip_optimizer.py
apps/ml-service/scripts/: bootstrap-modal-secrets.sh  eval_phase1.py  lint-traced-coverage.py
apps/ml-service/tests/: test_anomaly_detection.py  test_classify.py  test_contract.py  test_embeddings.py  test_forecasting.py  test_image_embedding.py  test_intent_classifier.py  test_intent_classifier_eval.py  test_kg_synthesize.py  test_lint_traced_coverage.py  test_observability.py  test_pdf_extraction.py  test_plan_endpoint.py  test_redaction.py  test_sandbox.py  test_suggestions.py  test_suggestions_eval.py  test_system_prompt.py  test_system_prompt_eval.py  test_transcription.py
(+1123 files in other folders)
